--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	<div>
+		My current favourite song is <a href="https://www.youtube.com/watch?v=vHU6ZRQJ50Q">G.O.M.D</a>
+		</div>
 </script>
 
 </body>
