--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 	<div>
-		My current favourite song is <a href="https://www.youtube.com/watch?v=vHU6ZRQJ50Q">"gomd"</a>
+		 <a href="https://www.youtube.com/watch?v=vHU6ZRQJ50Q">"My current favourite song is G.O.M.D"</a>
 		</div>
 </script>
 
